# samples

./: Dockerfile.aspnetcore-web-api  README.md  run-container.sh
cassandra/dotnet/: cassandra.sln
docker/dotnet-web-api/: Dockerfile  docker-compose.yml
docker/dotnet-web-api/Properties/: launchSettings.json
docker/smallest-dotnet-image/: Dockerfile  WeatherForecast.cs  smallest-dotnet-image.csproj
docker/smallest-dotnet-image/Controllers/: WeatherForecastController.cs
docker/smallest-dotnet-image/Properties/: launchSettings.json
dotnet/event-driven-architecture-intro/: docker-compose.yml  event-driven-architecture.sln
github-actions/: azure.yml
prometheus/: README.md  docker-compose.yaml  prometheus.yaml
prometheus/dotnet/: Dockerfile
prometheus/dotnet/src/: Program.cs  dotnet.csproj
rust/actix/: Cargo.toml  client.http
rust/actix-diesel-sqlite/: Cargo.toml  client.http  test.db
rust/actix-diesel-sqlite/migrations/2022-08-21-183531_create_posts/: up.sql
rust/actix-diesel-sqlite/src/: db.rs  main.rs
rust/actix-diesel-sqlite/src/db/: models.rs
rust/actix/src/: main.rs
rust/docker/: Cargo.toml  Dockerfile
rust/docker/src/: main.rs
rust/guessing_game/: Cargo.toml
rust/guessing_game/src/: main.rs
rust/minigrep/: output.txt  poem.txt
rust/mongodb/: Cargo.toml
rust/mongodb/src/: main.rs
rust/warp/: Cargo.toml
rust/warp/src/: db.rs  handlers.rs  main.rs  models.rs
rust/webserver/: index.html
scripts/: colored-echo.sh  delete-all-docker-container.sh  delete-all-docker-image.sh  stop-all-docker-container.sh
(+46 files in other folders)
