[package]
name = "actix-diesel-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
log = "0.4"
diesel = { version = "^1.1.0", features = ["sqlite"] }
dotenv = "0.15.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }