[package]
name = "mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"
tokio = { version = "1.20.1", features = ["full"] }


[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["tokio-runtime"]
